routing fixing, swagger updated
